--- a/front-end components/results.html
+++ b/front-end components/results.html
@@ -26,6 +26,7 @@
             <div class="buttons">
                 <button id="download-btn">Download</button>
                 <button id="regenerate-btn">Regenerate</button>
+                <button id="new-url-btn">New URL</button>
             </div>
         </div>
 
