--- a/front-end components/results.html
+++ b/front-end components/results.html
@@ -29,7 +29,7 @@
                 <ul id="breakdown-list">
                     <li>Buttons: <span id="buttons-count">Loading...</span></li>
                     <li>Links: <span id="links-count">Loading...</span></li>
-                    <li>Inputs Fields: <span id="inputs-count">Loading...</span></li>
+                    <li>Inputs Fields: <span id="input-fields-count">Loading...</span></li>
                     <li>Paragraphs: <span id="paragraphs-count">Loading...</span></li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
                 <p id="generation-status">generating test cases...</p>
                 <div class="action-buttons">
                     <button id="print-btn">Print</button>
-                    <button id="download-btn">Download</button>
+                    <button id="download-btn">Download CSV</button>
                     <button id="regenerate-btn">Regenerate</button>
                     <button id="new-url-btn">New URL</button>
                 </div>
