--- a/front-end components/home.html
+++ b/front-end components/home.html
@@ -23,7 +23,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Test Smarter, Not Harder</h1>
-            <h2>Automate test case generation with just a URL—simple and reliable.</h2>
+            <h2>Automate test case creation, so you can focus on testing.</h2>
             <div class="input-container">
                 <input id="url-input" type="url" placeholder="Paste a .edu, .org, or .gov URL" required>
                 <button id="generate-btn">Generate</button>
