--- a/front-end components/results.html
+++ b/front-end components/results.html
@@ -11,6 +11,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
+            <span class="circle"></span> <!--logo placeholder-->
             <a href="home.html">Next-Gen QA</a>
         </div>
         <ul>
