--- a/front-end components/home.html
+++ b/front-end components/home.html
@@ -11,6 +11,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
+            <span class="circle"></span> <!--logo placeholder-->
             <a href="home.html">Next-Gen QA</a>
         </div>
         <ul>
@@ -22,7 +23,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1>Test Smarter, Not Harder</h1>
+            <h1>TEST SMARTER,</h1>
+            <h1>NOT HARDER</h1>
             <h2>Automate test case creation, so you can focus on testing.</h2>
             <div class="input-container">
                 <input id="url-input" type="url" placeholder="Paste a .edu, .org, or .gov URL" required>
