--- a/front-end components/about.html
+++ b/front-end components/about.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="about-page">
     <!-- Navigation -->
     <nav>
         <div class="logo">
+            <span class="circle"></span> <!--logo placeholder-->
             <a href="home.html">Next-Gen QA</a>
         </div>
         <ul>
