--- a/front-end components/about.html
+++ b/front-end components/about.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
-            <span class="circle"></span> <!--logo placeholder-->
+            <span class="circle"></span>
             <a href="home.html">Next-Gen QA</a>
         </div>
         <ul>
@@ -24,7 +24,7 @@
     <section class="about">
         <div class="about-content">
             <h2>About Next-Gen QA</h2>
-            <p>Next-Gen QA simplifies website testing by automatically generating detailed test cases based on your website's structure and content. Our platform helps you create thorough test cases that cover key aspects of your site with accuracy. These generated test cases can be easily downloaded and integrated into your existing testing workflow. With this tool, you can ensure that your website is thoroughly tested, reducing manual effort and accelerating the testing process. Focus on delivering a high-quality user experience with reliable, automated test case generation.</p>
+            <p>Next-Gen QA simplifies website testing by automatically generating detailed test cases based on your site's structure and content. Easily download and integrate these test cases into your workflow, reducing manual effort and speeding up the testing process. Ensure thorough, accurate testing with reliable, automated test case generation.</p>
         </div>
         
         <div class="about-image">
