--- a/front-end components/home.html
+++ b/front-end components/home.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
-            <span class="circle"></span> <!--logo placeholder-->
+            <span class="circle"></span> <!--<span>&#128279;</span>-->
             <a href="home.html">Next-Gen QA</a>
         </div>
         <ul>
