--- a/front-end components/faq.html
+++ b/front-end components/faq.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
-            <span class="circle"></span> <!--logo placeholder-->
+            <span class="circle"></span>
             <a href="home.html">Next-Gen QA</a>
         </div>
         <ul>
@@ -56,7 +56,7 @@
 
         <div class="faq-item">
             <h4>Have more questions or suggestions?</h4>
-            <p>We’d love to hear from you! Reach out to us at <a href="mailto:nextgen@gmail.com">nextgen@gmail.com</a>.</p>
+            <p>We’d love to hear from you! Reach out to us at <a href="mailto:nextgenqa.info@gmail.com">nextgenqa.info@gmail.com</a>.</p>
         </div>
     </section>
 
